--- a/scripts/types_generator/assets/codegen/templates/BaseModel.jinja2
+++ b/scripts/types_generator/assets/codegen/templates/BaseModel.jinja2
@@ -18,6 +18,7 @@ class {{ class_name }}({{ base_class }}):{% if comment is defined %}  # {{ comme
 {%- endfilter %}
 {%- endif %}
 {%- for field in fields -%}
+    {%- set overrides = fields_overrides[field.name] if fields_overrides and field.name in fields_overrides else {} -%}
     {%- if not field.annotated and field.field %}
     {{ field.name }}: {{ field.type_hint }} = {{ field.field }}
     {%- else %}
@@ -26,8 +27,9 @@ class {{ class_name }}({{ base_class }}):{% if comment is defined %}  # {{ comme
     {%- else %}
     {{ field.name }}: {{ field.type_hint }}
     {%- endif %}
-    {%- if (not field.required or field.data_type.is_optional or field.nullable) and not field.annotated
-            %} = {{ field.represented_default }}
+    {%- set has_custom_default = overrides.default is defined -%}
+    {%- if (has_custom_default or not field.required or field.data_type.is_optional or field.nullable) and not field.annotated
+            %} = {% if has_custom_default %}{{ overrides.default }}{% else %}{{ field.represented_default }}{% endif %}
     {%- endif -%}
     {%- endif %}
     {%- if field.docstring %}
@@ -48,11 +50,5 @@ class {{ class_name }}({{ base_class }}):{% if comment is defined %}  # {{ comme
     @deprecated.deprecated(reason="{{ field.deprecated }}")
     {%- endif %}
     def {{ field.name }}(self) -> {{ field.return_type }}:
-        {{ field.body }}
-{%- endfor -%}
-{%- for field in validators %}
-    @field_validator("{{ field.name }}", mode="before")
-    @classmethod
-    def _validate_{{ field.name }}(cls, value: Any):
         {{ field.body }}
 {%- endfor -%}
